@@ -1,4 +1,4 @@
-module main
+module Main
 
 main : IO ()
 main = putStrLn "Hello world"
